@@ -12,6 +12,7 @@
     * Fix bug: _download_one_file.install() always fail even if successfully copied file.
     * Fix bug: cannot download NScript.
     * Fix bug: Weave is renamed to Firefox Sync.
+    * Support Linux Deepin. Linux Deepin users please upgrade to 10.05.93.
 
 2010-05-29 MA Yue <velly.empire@gmail.com>
 
